--- a/app/src/main/res/layout/activity_client_list.xml
+++ b/app/src/main/res/layout/activity_client_list.xml
@@ -6,8 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/white"
-    tools:context=".ClientListActivity">
+    android:background="@color/white">
 
 
     <LinearLayout
@@ -24,11 +23,22 @@
             android:layout_gravity="center_vertical"
             android:gravity="center_vertical"
             android:padding="10dp"
-            android:layout_weight="0.5"
+            android:layout_weight="0.8"
             android:text="Client Master"
             android:textStyle="bold"
             android:textColor="@color/white"
             android:textSize="14dp" />
+
+        <ImageView
+            android:id="@+id/img_search"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:src="@drawable/search"
+            android:layout_gravity="center"
+            android:visibility="visible"
+            android:layout_weight="3"
+
+            android:tint="@color/white"/>
 
         <ImageView
             android:id="@+id/img_refresh"
@@ -37,7 +47,7 @@
             android:src="@drawable/quantum_ic_refresh_white_24"
             android:layout_gravity="center"
             android:visibility="visible"
-            android:layout_weight="2.5"
+            android:layout_weight="3"
             android:tint="@color/white"/>
 
         <ImageView
@@ -45,18 +55,42 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:src="@drawable/add"
-            android:layout_weight="2.5"
+            android:layout_weight="3"
             android:layout_gravity="center"
             android:visibility="visible"
             android:tint="@color/white"/>
 
 
 
+
+
+
     </LinearLayout>
 
+    <EditText
+        android:id="@+id/edt_search"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/main"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="5dp"
+        android:background="@drawable/edit_text"
+        android:hint="Search"
+        android:inputType="none"
+        android:padding="8dp"
+        android:singleLine="true"
+        android:textColor="@color/black"
+        android:textColorHint="@color/dark_grey"
+        android:textSize="14dp"
+        android:visibility="gone">
+
+    </EditText>
+
     <HorizontalScrollView
-        android:layout_below="@id/main"
         xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_below="@id/edt_search"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
